<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MuslimEvents</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_events">Events</string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="location">Location: </string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_add_event">AddEventActivity</string>

</resources>
